# RAG_app

./: .gitignore  README.md  app.py  pyproject.toml
src/: chunk_file.py  embedding.py  file_loader.py  search.py  vector_db.py
